--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -14,4 +14,4 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag react-app-template:$(date +%s)
+      run: docker build . --file Dockerfile --tag react-app-template:$(GITHUB_SHA)
