--- a/package.json
+++ b/package.json
@@ -25,17 +25,20 @@
     "author": "",
     "license": "",
     "dependencies": {
+        "carbon-components": "^10.30.0",
+        "carbon-components-react": "^7.30.0",
+        "carbon-icons": "^7.0.7",
         "react": "^16.14.0",
         "react-dom": "^16.14.0",
         "react-redux": "^7.2.2",
         "react-router-dom": "^5.2.0",
         "redux": "^4.0.5",
         "redux-devtools-extension": "^2.13.8",
-        "redux-thunk": "^2.3.0",
-        "semantic-ui-css": "^2.4.1",
-        "semantic-ui-react": "^0.88.2"
+        "redux-thunk": "^2.3.0"
     },
     "devDependencies": {
+        "@types/carbon-components": "^10.27.0",
+        "@types/carbon-components-react": "^7.29.0",
         "@types/enzyme-adapter-react-16": "^1.0.6",
         "@types/jest": "^26.0.15",
         "@types/node": "^14.14.6",
