--- a/package.json
+++ b/package.json
@@ -25,15 +25,17 @@
     "author": "",
     "license": "",
     "dependencies": {
+        "@chakra-ui/react": "^1.6.0",
+        "@emotion/react": "^11.1.5",
+        "@emotion/styled": "^11.3.0",
+        "framer-motion": "^4.1.9",
         "react": "^16.14.0",
         "react-dom": "^16.14.0",
         "react-redux": "^7.2.2",
         "react-router-dom": "^5.2.0",
         "redux": "^4.0.5",
         "redux-devtools-extension": "^2.13.8",
-        "redux-thunk": "^2.3.0",
-        "semantic-ui-css": "^2.4.1",
-        "semantic-ui-react": "^0.88.2"
+        "redux-thunk": "^2.3.0"
     },
     "devDependencies": {
         "@types/enzyme-adapter-react-16": "^1.0.6",
